@@ -69,3 +69,4 @@ Wishlist
 - Use shift key to toggle whether to open tabs in foreground/background in Vienna.
 - Drop-down navigation list for back and forward buttons in browser pane.
 - Drop-down overflow list when too many tabs are open.
+- When deleting subscription, also delete smart folder rules involving that subscription.
